# monsoon

./: .gitignore  .pnpmfile.cjs  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cpu.rs  cpuid.rs  disks.rs  lib.rs  main.rs  memory.rs  network.rs  overview.rs  processes.rs  streams.rs  system.rs
src/components/: app-sidebar.tsx  core-heatmap.tsx  error-boundary.tsx  metrics-provider.tsx  sparkline.tsx  stat-meter.tsx  status-footer.tsx  theme-provider.tsx  theme-toggle.tsx  titlebar.tsx  usage-chart.tsx
src/components/navbar/: Navbar.tsx
src/components/ui/: card.tsx  dropdown-menu.tsx  resizable.tsx  sheet.tsx  table.tsx
src/hooks/: use-rolling-history.ts  use-stream.ts
src/lib/: format.ts
src/pages/cpu/: index.tsx
src/pages/dashboard/: index.tsx
src/pages/disks/: index.tsx
src/pages/home/: index.tsx
src/pages/memory/: index.tsx
src/pages/network/: index.tsx
src/pages/processes/: index.tsx
src/types/: system.ts
