[package]
name = "monsoon"
version = "0.1.0"
description = "Cross-platform system monitor built with Tauri and React"
authors = ["Sparkenstein"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monsoon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
# 0.33+ needed for per-disk I/O rates (Disk::usage)
sysinfo = "0.33"
tokio = { version = "1", features = ["time"] }

# cpuid only exists on x86; other targets get empty cache/feature lists.
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.2.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
